Capture pidstat data when collecting stats